Issue 223 - Environments Refactoring (#230)
- Environments Refactoring
- Send TeamsMembers/Users to the DAC
