# openapi/houston_service.yml
@@ -646,9 +646,9 @@ paths:
 
   /keyValues/environment/:
     get:
-      operationId: tb_houston_service.environment.read_all
+      operationId: tb_houston_service.lzmetadata_env.read_all_key_values
       tags:
-        - environment
+        - lzmetadata
       summary: Read the entire list of environments
       description: Read the list of environments
       responses:
@@ -666,77 +666,7 @@ paths:
                     value:
                       type: string
                       description: value
-    post:
-      operationId: tb_houston_service.environment.create
-      tags:
-        - environment
-      summary: Create an environment and add it to the environment list
-      description: Create a new environment in the environment list
-      requestBody:
-        $ref: '#/components/requestBodies/environment.environmentDetails'
-      responses:
-        "201":
-          description: Successfully created an environment
 
-  "/keyValues/environment/{key}":
-    get:
-      operationId: tb_houston_service.environment.read_one
-      tags:
-        - environment
-      summary: Read one environment from the list
-      description: Read one environment from the list
-      parameters:
-        - name: key
-          in: path
-          description: key of the environment to get from the list
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: Successfully read an environment from the list
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  key:
-                    type: string
-                  value:
-                    type: string
-    put:
-      operationId: tb_houston_service.environment.update
-      tags:
-        - environment
-      summary: Update an environment in the list
-      description: Update an environment in the list
-      parameters:
-        - name: key
-          in: path
-          description: key of the environment to update
-          required: true
-          schema:
-            type: string
-      requestBody:
-        $ref: "#/components/requestBodies/environment.environmentDetails"
-      responses:
-        "200":
-          description: Successfully updated an environment
-    delete:
-      operationId: tb_houston_service.environment.delete
-      tags:
-        - environment
-      summary: Delete an environment from the list
-      description: Delete an environment
-      parameters:
-        - name: key
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: Successfully deleted an environment
   /keyValues/ci/:
     get:
       operationId: tb_houston_service.ci.read_all
@@ -1311,6 +1241,31 @@ paths:
       responses:
         "200":
           description: Successfully updated a solution deployment
+
+
+  "/solutionEnvironment/":
+    post:
+      operationId: tb_houston_service.solutionEnvironment.create_all
+      tags:
+        - solution
+      summary: Create or update solution environment relationships
+      description: Create or update solution environment relationships
+      requestBody:
+        $ref: "#/components/requestBodies/solution.solutionEnvironmentDetails"
+      responses:
+        "201":
+          description: Successfully created solution environments
+
+    get:
+      operationId: tb_houston_service.solutionEnvironment.read_all
+      tags:
+        - solution
+      summary: Retrieve a list of solution environment relationships
+      description: Retrieve a list of environment relationships
+      responses:
+        "200":
+          description: Successfully retrieved a list of solution environments
+
 
   /solutionresources/:
     get:
@@ -1948,25 +1903,64 @@ paths:
         "200":
           description: Successfully deleted a landing zone WAN
 
-  /lzmetadata/:
+
+  "/lzmetadata_env/":
     post:
-      operationId: tb_houston_service.lzmetadata.create
+      operationId: tb_houston_service.lzmetadata_env.create_all
+      tags:
+        - lzmetadata
+      summary: Create or update landing zone env metadata from a list of environments
+      description: Create or update landing zone env metadata from a list of environments
+      requestBody:
+        $ref: "#/components/requestBodies/lzMetadata.lzMetadataEnvListDetails"
+      responses:
+        "201":
+          description: Successfully created list of landing zone metadata environments
+
+    get:
+      operationId: tb_houston_service.lzmetadata_env.read_all
+      tags:
+        - lzmetadata
+      summary: Retrieve a list of active landing zone metadata environments
+      description: Retrieve a list of active landing zone metadata environments
+      responses:
+        "200":
+          description: Successfully retrieved a list of landing zone metadata environments
+
+
+  "/lzmetadata_lan_vpc/{name}":
+    post:
+      operationId: tb_houston_service.lzmetadata_lan_vpc.create
       tags:
         - lzmetadata
       summary: Create or update landing zone metadata for a given group and name
       description: Create or update landing zone metadata for a given group and name
+      parameters:
+        - name: name
+          in: path
+          description: landing zone lan vpc metadata name
+          required: true
+          schema:
+            type: string      
       requestBody:
-        $ref: "#/components/requestBodies/lzMetadata.lzMetadataDetails"
+        $ref: "#/components/requestBodies/lzMetadata.lzMetadataListDetails"
       responses:
         "201":
           description: Successfully created a landing zone metadata
 
     get:
-      operationId: tb_houston_service.lzmetadata.read_all
+      operationId: tb_houston_service.lzmetadata_lan_vpc.read
       tags:
         - lzmetadata
       summary: Read the landing zone metadata
       description: Read the landing zone metadata
+      parameters:
+        - name: name
+          in: path
+          description: landing zone lan vpc metadata name
+          required: true
+          schema:
+            type: string      
       responses:
         "200":
           description: Successfully ran landing zone metadata 
@@ -1975,86 +1969,46 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/LZMetaData"
+                  $ref: "#/components/schemas/LZMetaDataList"
         
-        
-  "/lzmetadata/{group}/{name}":
-    get:
-      operationId: tb_houston_service.lzmetadata.read_one
-      tags:
-        - lzmetadata
-      summary: Read one landing zone metadata from the list
-      description: Read one landing zone metadata from the list
-      parameters:
-        - name: group
-          in: path
-          description: landing zone metadata group
-          required: true
-          schema:
-            type: string
-        - name: name
-          in: path
-          description: landing zone metadata name
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: Successfully read an landing zone metadata 
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/LZMetaData"
-        
+
     delete:
-      operationId: tb_houston_service.lzmetadata.delete
+      operationId: tb_houston_service.lzmetadata_lan_vpc.delete
       tags:
         - lzmetadata
       summary: Delete a landing zone metadata from the list
       description: Delete a landing zone  metadata
       parameters:
-        - name: group
-          in: path
-          required: true
-          schema:
-            type: string
         - name: name
           in: path
-          description: landing zone metadata key
+          description: landing zone lan vpc metadata name
           required: true
           schema:
             type: string
       responses:
         "200":
-          description: Successfully deleted a landing zone metadata
+          description: Successfully deleted a landing zone lan vpc metadata
 
 
-  "/lzmetadata_group/{group}":
+  "/lzmetadata_lan_vpc/":
     get:
-      operationId: tb_houston_service.lzmetadata.read_one_group
+      operationId: tb_houston_service.lzmetadata_lan_vpc.read_group
       tags:
         - lzmetadata
-      summary: Read group of landing zone metadata from the list
-      description: Read group of landing zone metadata from the list
-      parameters:
-        - name: group
-          in: path
-          description: landing zone metadata group
-          required: true
-          schema:
-            type: string
+      summary: Read landing zone lan vpc metadata from the list
+      description: Read landing zone lan vpc metadata from the list
       responses:
         "200":
           description: Successfully read an landing zone metadata 
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/LZMetaData"
+                $ref: "#/components/schemas/LZMetaDataList"
         
                 
   "/lzmetadata_folder_structure/":
     post:
-      operationId: tb_houston_service.lzmetadata.create_folder_structure
+      operationId: tb_houston_service.lzmetadata_folder_structure.create
       tags:
         - lzmetadata
       summary: Create or update landing zone folder structure metadata
@@ -2064,9 +2018,13 @@ paths:
       responses:
         "201":
           description: Successfully created a landing zone folder structure metadata
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LZMetaDataFolderStructure"          
 
     get:
-      operationId: tb_houston_service.lzmetadata.read_folder_structure
+      operationId: tb_houston_service.lzmetadata_folder_structure.read
       tags:
         - lzmetadata
       summary: Read the landing zone folder structure metadata
@@ -2078,6 +2036,16 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/LZMetaDataFolderStructure"
+
+    delete:
+      operationId: tb_houston_service.lzmetadata_folder_structure.delete
+      tags:
+        - lzmetadata
+      summary: Delete the landing zone folder structure metadata
+      description: Delete the landing zone  folder metadata
+      responses:
+        "200":
+          description: Successfully deleted the landing zone folder structure metadata
 
 
   /keyValues/bgproutingmode/:
@@ -2532,13 +2500,22 @@ components:
       description: landingzonewan to create
       required: true
       
-    lzMetadata.lzMetadataDetails:
+    lzMetadata.lzMetadataListDetails:
         content:
           application/json:
             schema:
-              x-body-name: lzMetadataDetails
-              $ref: "#/components/schemas/LZMetaData"
+              x-body-name: lzMetadataListDetails
+              $ref: "#/components/schemas/LZMetaDataList"
         description: landingzone  meta data to create
+        required: true
+
+    lzMetadata.lzMetadataEnvListDetails:
+        content:
+          application/json:
+            schema:
+              x-body-name: lzMetadataEnvListDetails
+              $ref: "#/components/schemas/LZMetaDataEnvList"
+        description: landingzone environment metadata to create
         required: true
 
     lzMetadata.lzMetadataFolderStructureDetails:
@@ -2680,9 +2657,17 @@ components:
                 type: string
                 nullable: true
                 description: The task Id
-
       description: the solution id to deploy
       required: true
+
+    solution.solutionEnvironmentDetails:  
+      content:
+        application/json:
+          schema:
+            x-body-name: solutionEnvironmentListDetails
+            $ref: "#/components/schemas/SolutionEnvironmentList"
+      description: Solution environment to create
+      required: true                
 
     solutionresource.solutionResourceDetails:
       content:
@@ -2822,6 +2807,7 @@ components:
           description: description
         accessRequestedBy:
           type: integer
+          nullable: True
           description: accessRequestedBy
         source:
           type: string
@@ -2881,6 +2867,9 @@ components:
         businessUnitId:
           type: integer
           description: business unit to which the team belongs to
+        lastUpdated:
+          type: string
+          description: last updated datetime
         isActive:
           type: boolean
           description: to activate/deactivate the team
@@ -3149,12 +3138,9 @@ components:
         sourceControl:
           type: string
           description: sourceControl
-        environments:
-          type: array
-          description: environments
           items:
             type: string
-        active:
+        isActive:
           type: boolean
           description: active
         favourite:
@@ -3193,6 +3179,29 @@ components:
           nullable: true
           description: task id
 
+    SolutionEnvironment:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: id
+        solutionId:
+          type: integer
+          description: solutionId
+        environmentId:
+          type: integer
+          description: environmentId          
+        lastUpdated:
+          type: string
+          description:  description
+        isActive:
+          type: boolean
+          description: Is active?
+
+    SolutionEnvironmentList:
+      type: array
+      items:
+        $ref: "#/components/schemas/SolutionEnvironment"          
 
     SolutionResource:
       type: object
@@ -3255,12 +3264,10 @@ components:
               type: string
               description: Password
 
-    LZMetaData:
+
+    LZMetaDataList:
       type: object
       properties:
-        group:
-          type: string
-          description: group of the metadata
         name:
           type: string
           description: name/key of meta data
@@ -3272,9 +3279,26 @@ components:
         description:
           type: string
           description:  description
-        active:
+        isActive:
           type: boolean
-          description: Is the metadaa active?
+          description: Is active?
+
+
+    LZMetaDataEnv:
+      type: object
+      properties:
+        id: 
+          type: integer
+        name:
+          type: string
+        isActive:
+          type: boolean
+
+    
+    LZMetaDataEnvList:
+      type: array
+      items:
+        $ref: "#/components/schemas/LZMetaDataEnv"
 
     Folder:
       type: object
@@ -3302,5 +3326,53 @@ components:
 
     LZMetaDataFolderStructure:
       type: object
+      properties:
+        active:
+          type: boolean
+        value:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+              isEnabled:
+                type: boolean
+              name:
+                type: string
+              children:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    isEnabled:
+                      type: boolean
+                    name:
+                      type: string
+                    children:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          isEnabled:
+                            type: boolean
+                          name:
+                            type: string
+                          children:
+                            type: array
+                            items:
+                              type: object
+                              properties:
+                                id:
+                                  type: integer
+                                isEnabled:
+                                  type: boolean
+                                name:
+                                  type: string
+
 
 
